tests/ui/generic-associated-types/issue-67510.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/issue-67510.rs:5:21
   |
LL | fn f(x: Box<dyn X<Y<'a> = &'a ()>>) {}
   |                     ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
LL | fn f(x: Box<dyn for<'a> X<Y<'a> = &'a ()>>) {}
   |                 +++++++
help: consider introducing lifetime `'a` here
   |
LL | fn f<'a>(x: Box<dyn X<Y<'a> = &'a ()>>) {}
   |     ++++

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/issue-67510.rs:5:28
   |
LL | fn f(x: Box<dyn X<Y<'a> = &'a ()>>) {}
   |                            ^^ undeclared lifetime
   |
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
LL | fn f(x: Box<dyn for<'a> X<Y<'a> = &'a ()>>) {}
   |                 +++++++
help: consider introducing lifetime `'a` here
   |
LL | fn f<'a>(x: Box<dyn X<Y<'a> = &'a ()>>) {}
   |     ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
